# careamics

./: .gitignore  .pre-commit-config.yaml  =0.6  =0.6.0  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  PR_POISSON_LOSS.md  README.md  RULES.md  STYLE_GUIDE.md  benchmark.ipynb  denoise_gamillus.ipynb  disentangle.sbatch  env.yml  example.ipynb  install.sh  launch_train_lvae.sh  mypy.ini  pyproject.toml  pyrightconfig.json  test_microsplit_doctest.ipynb
.basedpyright/: baseline.json
.github/: ISSUE_TEMPLATE.md  TEST_FAIL_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  example_report.md  feature_request.md  interoperability_request.md  question.md  refactoring_suggestion.md
.github/workflows/: ci.yml  ci_compat.yml  ci_guides.yml  ci_lvae.yml  ci_macos.yml  ci_uv.yml  codecov.yml  czi.yml  lvae.yml  smoke_test.yml
benchmarks/zarr/: __init__.py  benchmark_read_ts.py  benchmark_write.py  benchmark_write_ts.py
bugfix/: evaluate_LVAE.ipynb  example_training_LVAE_denoiSplit.ipynb  example_training_LVAE_muSplit.ipynb  train_LVAE_denoiSplit.py
demos/: block_validation_selection.py  bsd68_demo.ipynb  bsd68_zarr_demo.ipynb  care_U2OS_demo.ipynb  demo_custom_image_stack.ipynb  demo_datamodule.ipynb  demo_dataset.ipynb  demo_patch_extractor.py  mouse_nuclei_demo.ipynb  stratified_patching.ipynb  stratified_patching_perf.ipynb  val_split.ipynb
docs/: README.md  advanced_configuration.py  careamist_predicting.md  careamist_predicting.py  careamist_training.md  careamist_training.py  configuration.md  configuration_advanced.py  configuration_advanced_n2v.py  configuration_basic.py  configuration_intermediate.py  configuration_io.py  configuration_lightning.py  configuration_simple.py  data.md  data.py  getting_started.md  getting_started.py  intermediate_configuration.py  lightning_api.md  lightning_api.py  nav.toml  training_logging.md  training_logging.py
docs/current/: careamist_predicting.md  careamist_predicting.py  careamist_train_logging.md  careamist_train_logging.py  careamist_training.md  careamist_training.py  configuration.md  configuration_advanced.py  configuration_io.py  configuration_lightning.py  configuration_n2v.py  configuration_simple.py  data.md  data.py  getting_started.py  index.md  lightning_api.md  lightning_api.py  training_logging.py
docs/faq/: index.md
docs/guides/: test_guides.py
docs/tutorials/: custom_data.md  data_custom_image_stack.py  data_custom_read_func.py  implementing_an_image_stack.md  implementing_an_image_stack.py  index.md  logging_wandb_tensorboard.md  logging_wandb_tensorboard.py  n2v_data_exploration.md  patch_filtering.md  patch_filtering.py
docs/v0.1/: faq.md  index.md
examples/: DL4MIA_N2V.ipynb  careamics_api.py  careamics_lightning_api.ipynb  dummy_noise_model.npz  evaluate_LVAE.ipynb  example.ipynb  example_LVAE_split.ipynb  example_SEM.ipynb  example_training_LVAE_denoiSplit.ipynb  example_training_LVAE_split.ipynb  example_training_LVAE_split_old_data_config.ipynb  full_reference.yml  lightning_api.ipynb  lightning_api.py  lightning_test.ipynb  n2v_2D_BSD.yml  n2v_2D_SEM.yml  n2v_2D_config.yml  n2v_2D_new.yml  n2v_2D_reference.yml  n2v_full_reference.yml  train_LVAE_split.py
examples/2D/: example_BSD68.ipynb  example_SEM.ipynb  example_ZARR.ipynb  n2v_2D_BSD.yml  n2v_2D_SEM.yml
examples/3D/: example_flywing_3D.ipynb  n2v_3D.yml  n2v_flywing_3D.yml
hpc/: microsplit_inner_tiling.sbatch  microsplit_switi.sbatch
notebooks/: test_noise_model_sampling.ipynb
scripts/: __init__.py  config_factory.py  config_utils.py  dataset_factory.py  export_bmz_readme.py  io.py  microplit_api_test.py  microsplit_factory.py  microsplit_inner_tiling_inference.py  microsplit_sw_tiled_inference.py  microsplit_switi_inference.py  microsplit_tiled_inference.py  stats.py
scripts/interactive/: microsplit_tiled_inference.py
src/: __init__.py  augment.py  dataloader.py  engine.py  factory.py  losses.py  main.py  metrics.py  models.py  noisemodels.py  sample_config.yaml  utils.py
src/careamics/: __init__.py  augment.py  careamics_kiln.py  careamist.py  careamist_v2.py  check_metrics.ipynb  conftest.py  engine.py  lightning.py  lightning_datamodule.py  lightning_module.py  lightning_prediction.py  lightning_prediction_datamodule.py  lightning_prediction_loop.py  lightning_prediction_writer.py  ligthning_data_module.py  ligthning_datamodule.py  metrics.py  nm_training_placeholder.py  prediction_utils.py  train_lvae.py
src/careamics_restoration/: __init__.py  augment.py  dataloader.py  engine.py  factory.py  logger.py  metrics.py  prediction_utils.py  training.py
src/configs/: n2v_2D_config.yml  sample_config.yaml
src/n2v/: __init__.py  augment.py  dataloader.py  engine.py  factory.py  layers.py  losses.py  main.py  metrics.py  models.py  n2v.py  noisemodels.py  pixel_manipulation.py  prediction.py  prediction_utils.py  training.py  utils.py
tests/: GUIDELINES.md  __init__.py  conftest.py  preliminary_test.ipynb  smoke_test.py  test_augment.py  test_careamics_kiln.py  test_careamist.py  test_careamist_1d.py  test_careamist_predict.py  test_careamist_train.py  test_careamist_v2.py  test_careamist_v2_predict.py  test_careamist_v2_train.py  test_conf.py  test_config.py  test_conftest.py  test_dataloader.py  test_dataloader_utils.py  test_engine.py  test_lightning_datamodule.py  test_lightning_module.py  test_lightning_prediction_datamodule.py  test_metrics.py  test_model.py  test_prediction.py  test_prediction_utils.py  test_smoke_after_packaging.py  test_test.py  utils.py
tests/bioimage/: test_engine_bmz.py  test_export.py  test_io.py  test_rdf.py
tests/cli/: test_conf.py  test_main.py
tests/compat/: conftest.py  smoke_test.py  test_careamist.py  test_conftest.py
tests/config/: test_algorithm.py  test_algorithm_model.py  test_callback_models.py  test_config.py  test_config_filters.py  test_configuration.py  test_configuration_factories.py  test_configuration_factory.py  test_configuration_io.py  test_configuration_model.py  test_data.py  (+23 more)
(+1488 files in other folders)
